--- a/index.css
+++ b/index.css
@@ -4,27 +4,49 @@
 }
 body{
     font-family: Arial, sans-serif;
+    background-color: #e8f6fc;
 }
-.text{
-
-
+#text{
+    background: #7bcfe4;
+    border-color: #7bcfe4;
+    border: none;
+    width: 150px;
+    height: 30px;
 display: flex;
 }
 #btn{
     display: flex;
     margin-top: 10px;
     margin-bottom: 10px;
+    background: rgb(34, 34, 201);
+    color: white;
+    padding: 6px 6px;
+    border-radius: 5px;
+   
+   
 }
-.section{
-    margin: 0 auto;
-    padding: 20px;
-  max-width: 400px;
-  background-color: #f5f5f5;
-  border: 1px solid #ccc;
-  border-radius: 5px;
- 
+/* .section{
 
-}
+} */
 #age{
     margin-top: 10px;
+    background: #7bcfe4;
+    border-color: #7bcfe4;
+    border: none;
+    width: 150px;
+    height: 30px;
+}
+p{
+    text-align: justify;
+    font-family:Arial, Helvetica, sans-serif;
+
+}
+h1{
+    text-align: center;
+}
+#text, #age, #btn{
+    
+}
+section{
+    text-align: center;
 }
