--- a/index.css
+++ b/index.css
@@ -35,6 +35,29 @@ main section {
     text-align: center;
 }
 
+section h1 {
+    font-size: 36px;
+    margin-bottom: 1rem;
+}
+
+section h1 .checker {
+    color: var(--secondary-color);
+}
+
+section p {
+    font-size: 20px;
+    color: #46364a;
+}
+
+.input-box label {
+    font-size: 18px;
+    color: #46364a;
+}
+
+.input-box {
+    margin-top: 1.5rem;
+}
+
 input[type=text],
 input[type=number] {
     width: 50%;
